[tool.poetry]
name = "videollm-online"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"
transformers = "^4.46.3"
gradio = { version = "^5.6.0", optional = true }
submitit = "^1.5.2"
editdistance = "^0.8.1"
levenshtein = "^0.26.1"
peft = "^0.13.2"
av = "^13.1.0"
flash-attn = { version = "^2.7.0.post2", optional = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ipython = "^8.29.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.poetry.extras]
demo = ["gradio"]
flash-attn = ["flash-attn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
